tests/error/vararg_after.gw
#! [contains] used after
fun void test(...) {
  vararg.start;
  vararg.end;
  vararg $ int;
}
